# KondateAgent

./: .gitignore  .issue_body.md  CLAUDE.md  MANUAL_TEST_REPORT.md  README.md
.serena/: project.yml
Docs/: LangGraphResearch.md
backend/: .env.example  .gitignore  README.md  RECIPE_COLLECTION_README.md  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  main.py
backend/app/models/: __init__.py  ingredient.py  meal_plan.py  recipe.py
backend/app/routers/: __init__.py  auth.py  creators.py  ingredients.py  meal_plans.py  recipes.py
backend/app/services/: __init__.py  creator_store.py  description_parser.py  ingredient_parser.py  instagram_client.py  meal_plan_generator.py  meal_plan_refinement.py  meal_plan_store.py  query_generator.py  recipe_cache.py  recipe_collection_service.py  recipe_matcher.py  session_store.py  youtube_client.py
backend/tests/: test_api_creators.py  test_api_ingredients.py  test_api_meal_plans.py  test_api_recipes.py  test_config.py  test_creator_store.py  test_description_parser.py  test_ingredient_parser.py  test_instagram_client.py  test_integration.py  test_meal_plan_generator.py  test_meal_plan_models.py  test_meal_plan_refinement.py  test_meal_plan_store.py  test_models.py  test_query_generator.py  test_recipe_cache.py  test_recipe_collection_integration.py  test_recipe_collection_service.py  test_recipe_matcher.py  test_recipe_models.py  test_session_store.py  test_youtube_client.py
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
specs/: ARCHITECTURE.md  DOMAIN.md  PRINCIPLES.md
(+74 files in other folders)
